--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,55 @@
-.row{
-    background:red;
-    height: 10vh;
+header{
+    background:white;
+    height: 3rem;
+    width: 100vw;
+}
+
+main{
+    height: calc(100vh - 3rem);
+    width: 100vw;
+}
+
+.main-content{
+    height: calc(100vh - 3rem);
+    width: 100vw;
 }
 
 .sidebar{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 90vh;
-    width: 10vh;
     background-color: aqua;
+    width: 3rem;
+    height:calc(100vh - 3rem);
 }
 
 .top-bar{
-    width: 95vw;
-    height: 10vh;
-    background-color: blue;
-    position: absolute;
-    top: 58px;
-    left: 59px;
+    background-color: rgba(27,114,232,255);
+    width:calc(100vw - 3rem);
+    height: 4rem;
 }
 
 .plan{
-    width: 95vw;
-    height: 79vh;
     overflow: auto;
     background-color: yellowgreen;
-    position: absolute;
-    top: 116px;
-    left: 59px;
+    width:calc(100vw - 3rem);
+    height: calc(100vh - 6rem);
 }
 
 .menù{
     display: flex;
     justify-content: space-between;
+}
+
+.sidebar{
+    background-image: url(../screenshots/img/img/sidebar-bg.png);
+    background-color: #051e34;
+    color: white;
+    font-size: 0.9rem;
+}
+
+.row-bar{
+    display: flex;
+    justify-content: space-between;
+    color: white;
 }
