--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,12 @@ header{
 
 main{
     height: calc(100vh - 3rem);
-    width: 100vw;
+    width: 100%;
 }
 
 .main-content{
     height: calc(100vh - 3rem);
-    width: 100vw;
+    width: 100%;
 }
 
 .sidebar{
@@ -19,20 +19,19 @@ main{
     flex-direction: column;
     justify-content: space-between;
     background-color: aqua;
-    width: 3rem;
     height:calc(100vh - 3rem);
 }
 
 .top-bar{
     background-color: rgba(27,114,232,255);
-    width:calc(100vw - 3rem);
+    width:100%;
     height: 4rem;
 }
 
 .plan{
     overflow: auto;
     background-color: yellowgreen;
-    width:calc(100vw - 3rem);
+    width:100%;
     height: calc(100vh - 6rem);
 }
 
