--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,10 @@ main{
     width: 100%;
 }
 
-.main-content{
+/* .main-content{
     height: calc(100vh - 3rem);
     width: 100%;
-}
+} */
 
 .sidebar{
     display: flex;
