--- a/css/style.css
+++ b/css/style.css
@@ -11,14 +11,10 @@ main{
 
 
 .sidebar{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
     height:calc(100vh - 3rem);
     background-image: url(../screenshots/img/img/sidebar-bg.png);
     background-color: #051e34;
     color: white;
-    font-size: 0.9rem;
 }
 
 .top-bar{
@@ -27,9 +23,15 @@ main{
     height: 4rem;
 }
 
+.row-bar{
+    display: flex;
+    justify-content: space-between;
+    color: white;
+}
+
 .plan{
     overflow: auto;
-    background-color: yellowgreen;
+    background-color:rgba(248,249,250,255);
     width:100%;
     height: calc(100vh - 7rem);
 }
@@ -39,9 +41,6 @@ main{
     justify-content: space-between;
 }
 
-
-.row-bar{
-    display: flex;
-    justify-content: space-between;
-    color: white;
+.immage img{
+    width: 100%;
 }
